syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// ShamanTalents message.
message ShamanTalents {
}

enum ShamanPrimeGlyph {
    ShamanPrimeGlyphNone = 0;
}

enum ShamanMajorGlyph {
    ShamanMajorGlyphNone = 0;
    GlyphOfUnstableEarth = 41517;
    GlyphOfChainLightning = 41518;
    GlyphOfSpiritWalk = 41524;
    GlyphOfCapacitorTotem = 41526;
    GlyphOfPurge = 41527;
    GlyphOfFireElementalTotem = 41529;
    GlyphOfFireNova = 41530;
    GlyphOfFlameShock = 41531;
    GlyphOfWindShear = 41532;
    GlyphOfHealingStreamTotem = 41533;
    GlyphOfHealingWave = 41534;
    GlyphOfTotemicRecall = 41535;
    GlyphOfTelluricCurrents = 41536;
    GlyphOfGroundingTotem = 41538;
    GlyphOfSpiritwalkersGrace = 41539;
    GlyphOfWaterShield = 41541;
    GlyphOfCleansingWaters = 41542;
    GlyphOfFrostShock = 41547;
    GlyphOfChaining = 41552;
    GlyphOfHealingStorm = 43344;
    GlyphOfGhostWolf = 43725;
    GlyphOfThunder = 45770;
    GlyphOfFeralSpirit = 45771;
    GlyphOfRiptide = 45772;
    GlyphOfShamanisticRage = 45776;
    GlyphOfHex = 45777;
    GlyphOfTotemicVigor = 45778;
    GlyphOfLightningShield = 71155;
    GlyphOfPurging = 104052;
    GlyphOfEternalEarth = 104053;
}

enum ShamanMinorGlyph {
    ShamanMinorGlyphNone = 0;
    GlyphOfTheLakestrider = 41537;
    GlyphOfLavaLash = 41540;
    GlyphOfAstralRecall = 43381;
    GlyphOfFarSight = 43385;
    GlyphOfTheSpectralWolf = 43386;
    GlyphOfTotemicEncirclement = 43388;
    GlyphOfThunderstorm = 44923;
    GlyphOfDeluge = 45775;
    GlyphOfSpiritRaptors = 104126;
    GlyphOfLingeringAncestors = 104127;
    GlyphOfSpiritWolf = 104128;
    GlyphOfFlamingSerpent = 104129;
    GlyphOfTheCompy = 104130;
    GlyphOfElementalFamiliars = 104131;
    GlyphOfAstralFixation = 104133;
    GlyphOfRainOfFrogs = 104134;
}

// END GENERATED

enum EarthTotem {
	NoEarthTotem = 0;
	StrengthOfEarthTotem = 1;
	TremorTotem = 2;
	StoneskinTotem = 3;
	EarthElementalTotem = 4;
}

enum AirTotem {
	NoAirTotem = 0;
	WindfuryTotem = 2;
	WrathOfAirTotem = 3;
}

enum FireTotem {
	NoFireTotem = 0;
	MagmaTotem = 1;
	SearingTotem = 2;
	FlametongueTotem = 3;
	FireElementalTotem = 4;
}

enum WaterTotem {
	NoWaterTotem = 0;
	ManaSpringTotem = 1;
	HealingStreamTotem = 2;
	TotemOfTranquilMind = 3;
	ElementalResistanceTotem = 4;
}

enum CallTotem {
	NoCall = 0;
	Elements = 1;
	Ancestors = 2;
	Spirits = 3;
}

message TotemSet {
	EarthTotem earth = 1;
	AirTotem air = 2;
	FireTotem fire = 3;
	WaterTotem water = 4;
}

message ShamanTotems {
	// Not used here, but used by APL
	enum TotemType {
		TypeUnknown = 0;
		Earth = 1;
		Air = 2;
		Fire = 3;
		Water = 4;
	}

	TotemSet elements = 5;
	TotemSet ancestors = 6;
	TotemSet spirits = 7;

	EarthTotem earth = 8;
	AirTotem air = 9;
	FireTotem fire = 10;
	WaterTotem water = 11;
}

enum ShamanShield {
	NoShield = 0;
	WaterShield = 1;
	LightningShield = 2;
}

enum ShamanImbue {
    NoImbue = 0;
    WindfuryWeapon = 1;
    FlametongueWeapon = 2;
    FrostbrandWeapon = 3;
	EarthlivingWeapon = 4;
}

enum ShamanSyncType {
  NoSync = 0;
  SyncMainhandOffhandSwings = 1;
  DelayOffhandSwings = 2;
	Auto = 3;
}

message ShamanOptions {
	ShamanShield shield = 1;
	ShamanTotems totems = 2;
	CallTotem call = 3;
	ShamanImbue imbue_mh = 4;
}

message ElementalShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;

		enum ThunderstormRange {
			UnsetTSRange = 0;
			TSInRange = 1;
			TSOutofRange = 2;
		}
		ThunderstormRange thunderstormRange = 2;
	}
	Options options = 3;
}

message EnhancementShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;
		ShamanSyncType sync_type = 2;
		ShamanImbue imbue_oh = 3;
	}

	Options options = 3;
}

enum ShamanHealSpell {
	AutoHeal = 0;
	HealingWave = 1;
	HealingSurge = 2;
	ChainHeal = 3;
}

message RestorationShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;
		int32 earth_shield_p_p_m = 2;
	}

	Options options = 3;
}
